--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -12,7 +12,7 @@
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg shadow-sm bg-white shadow-sm fixed-top bg-transparent">
     <div class="container">
-        <img src="Assets/Logo.png" alt="Logo Baya Casal" class="me-2" style="height: 40px; width: auto;">
+        <img src="logo.png" alt="Logo Baya Casal" class="me-2" style="height: 40px; width: auto;">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
         <span class="navbar-toggler-icon"></span>
       </button>
