Mejora de estilo en la pagina de success

--- a/FRONTEND/public/success.html
+++ b/FRONTEND/public/success.html
@@ -5,7 +5,7 @@
     <title>Envío Exitoso</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="header-con-fondo">
     <div class="form-container">
         <h2>✅ ¡Formulario enviado correctamente!</h2>
         <p>Gracias por registrarte.</p>
