--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -12,7 +12,7 @@
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg shadow-sm bg-white fixed-top bg-transparent shadowbox_Navbar">
     <div class="container">
-        <img src="logo.png" alt="Logo Baya Casal" class="me-2" style="height: 40px; width: auto;">
+        <img src="logo.png" alt="Logo Baya Casal" class="me-2 logo-navbar">
     </div>
   </nav>
 
