centrado del logo en el navbar de celulares

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -11,8 +11,8 @@
 <body>
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg shadow-sm bg-white fixed-top bg-transparent shadowbox_Navbar">
-    <div class="container">
-        <img src="logo.png" alt="Logo Baya Casal" class="me-2 logo-navbar">
+    <div class="container d-flex justify-content-center">
+      <img src="logo.png" alt="Logo Baya Casal" class="logo-navbar">
     </div>
   </nav>
 
