prueba 4 para centrar logo navbar

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg shadow-sm bg-white fixed-top bg-transparent shadowbox_Navbar">
-    <div class="container text-center">
+    <div class="container d-flex align-items-center justify-content-center">
       <img src="logo.png" alt="Logo Baya Casal" class="logo-navbar">
     </div>
   </nav>
