Correcion: le faltaba el tilde al Sí en la columna ENUM de codigo de conducta

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -129,7 +129,7 @@
       <div class="form-step">
         <label for="codigo">¿Acepta el Código de Conducta?</label>
         <select id="codigo" name="codigo" required>
-          <option value="Si">Sí</option>
+          <option value="Sí">Sí</option>
           <option value="No">No</option>
         </select>
 
