Separe los JS del frontend para daca HTML, es mas prolijo

--- a/FRONTEND/public/success.html
+++ b/FRONTEND/public/success.html
@@ -12,6 +12,6 @@
         <button id="btnVolver" class="btn">Volver al Menú Principal</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="success.js"></script>
 </body>
 </html>
