mejora en el centrado del logo del navbar. Tambien puse mas prolijo el style.css

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -11,11 +11,11 @@
 <body>
 
   <!-- NAVBAR-->
-  <nav class="navbar navbar-expand-lg shadow-sm bg-white fixed-top bg-transparent shadowbox_Navbar">
-    <div class="container d-flex align-items-center justify-content-center">
-      <img src="logo.png" alt="Logo Baya Casal" class="logo-navbar">
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg shadow-sm bg-white fixed-top bg-transparent shadowbox_Navbar">
+  <div class="container">
+    <img src="logo.png" alt="Logo Baya Casal" class="logo-navbar">
+  </div>
+</nav>
 
 
   <!-- HERO -->
