mejoras de diseño en el progress bar 2

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -43,6 +43,7 @@
   
       <!-- Barra de progreso -->
       <div class="progressbar">
+        <div class="progress-line"></div>
         <div class="progress-step progress-step-active" data-title="Contacto"></div>
         <div class="progress-step" data-title="Fiscales"></div>
         <div class="progress-step" data-title="Bancarios"></div>
