se agregan textos descriptivos que van antes del formulario

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -38,9 +38,17 @@
 
   <!-- SECCION: MULTI-STEP FORM -->
   <section id="Completarform" class="py-5">
+
+    <br><h2 class="text-center mb-4">Formulario de Proveedores</h2><br>
+    <ul class="parrafo-formal" >
+      
+      <li>La información solicitada es necesaria para evaluarte e incluirte en nuestra base de proveedores autorizados. Una vez enviado el formulario, se evaluarán los datos y documentos recibidos.</li><br>
+      <li>Toda la información proporcionada será tratada con estricta confidencialidad y utilizada exclusivamente con fines administrativos y de validación.</li><br>
+      <li>La notificación sobre el estado de la aprobación será enviada al correo electrónico de contacto proporcionado.
+      Te agradecemos por tu interés en formar parte de nuestra red de proveedores.</li>
+    </ul>
+
     <div class="form-container">
-      <h2 class="text-center mb-4">Formulario de Proveedores</h2>
-  
       <!-- Barra de progreso -->
       <div class="progressbar">
         <div class="progress-line"></div>
@@ -128,6 +136,15 @@
   
         <!-- Step 4: Código de Conducta -->
         <div class="form-step">
+
+          <p class="parrafo-formal">
+            Acceda al siguiente enlace para descargar nuestro 
+            <a href="ruta/al/codigo_de_conducta.pdf" target="_blank" class="link-formal">
+              Código de Conducta
+            </a>. 
+            <br><br>Le recordamos que es un requisito indispensable estar alineado a nuestras politicas de conducta para pdoer formar parte de nuetsra cartera de proveedores
+          </p>
+
           <label for="codigo">¿Acepta el Código de Conducta?</label>
           <select id="codigo" name="codigo" required>
             <option value="Sí">Sí</option>
