--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -39,13 +39,13 @@
   <!-- SECCION: MULTI-STEP FORM -->
   <section id="Completarform" class="py-5">
 
-    <br><h2 class="text-center mb-4">Formulario de Proveedores</h2><br>
+    <br><h2 class="text-center mb-4">Formulario de Proveedores</h2>
+
     <ul class="parrafo-formal" >
-      
-      <li>La información solicitada es necesaria para evaluarte e incluirte en nuestra base de proveedores autorizados. Una vez enviado el formulario, se evaluarán los datos y documentos recibidos.</li><br>
+      <li>La información solicitada es necesaria para evaluarte e incluirte en nuestra base de proveedores autorizados. </li><br>
+      <li>Una vez enviado el formulario, se evaluarán los datos y documentos recibidos.</li><br>
       <li>Toda la información proporcionada será tratada con estricta confidencialidad y utilizada exclusivamente con fines administrativos y de validación.</li><br>
-      <li>La notificación sobre el estado de la aprobación será enviada al correo electrónico de contacto proporcionado.
-      Te agradecemos por tu interés en formar parte de nuestra red de proveedores.</li>
+      <li>La notificación sobre el estado de la aprobación será enviada al correo electrónico de contacto proporcionado.</li>
     </ul>
 
     <div class="form-container">
