se agrega bucket con el link del url del codigo de conducta

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -139,7 +139,7 @@
 
           <p class="parrafo-formal">
             Acceda al siguiente enlace para descargar nuestro 
-            <a href="ruta/al/codigo_de_conducta.pdf" target="_blank" class="link-formal">
+            <a href="https://vasvpsjslvjbfnyjjufx.supabase.co/storage/v1/object/public/conducta//CODIGO_CONDUCTA-BAYACASAL.pdf" target="_blank" class="link-formal">
               Código de Conducta
             </a>. 
             <br><br>Le recordamos que es un requisito indispensable estar alineado a nuestras politicas de conducta para pdoer formar parte de nuetsra cartera de proveedores
