correcion del column type en las que debians er numericas

--- a/FRONTEND/public/index.html
+++ b/FRONTEND/public/index.html
@@ -74,7 +74,7 @@
           <input type="text" id="name" name="name" required>
   
           <label for="phone">Teléfono:</label>
-          <input type="tel" id="phone" name="phone" required>
+          <input type="number" id="phone" name="phone" required>
   
           <label for="email">Correo Electrónico:</label>
           <input type="email" id="email" name="email" required>
@@ -97,7 +97,7 @@
           <input type="text" id="razon_social" name="razon_social" required>
   
           <label for="cuit">CUIT:</label>
-          <input type="text" id="cuit" name="cuit" required>
+          <input type="number" id="cuit" name="cuit" required>
   
           <label for="direccion_fiscal">Dirección Fiscal:</label>
           <input type="text" id="direccion_fiscal" name="direccion_fiscal" required>
@@ -133,7 +133,7 @@
           <input type="text" id="banco" name="banco" required>
   
           <label for="cbu">CBU:</label>
-          <input type="text" id="cbu" name="cbu" required>
+          <input type="number" id="cbu" name="cbu" required>
   
           <label for="cuenta">Cuenta:</label>
           <select id="cuenta" name="cuenta" required>
